--- a/Configuration/Routes/Api.yaml
+++ b/Configuration/Routes/Api.yaml
@@ -6,8 +6,12 @@ routes:
         routes:
           - methods: [any]
             route: '/schema.json'
-            file: 'EXT:code711_newsapi/Resources/Private/Api/schema.json'
+            file: 'EXT:code711_api/Resources/Private/Api/schema.json'
             contentType: 'application/json'
           - methods: [get]
             route: '/listnews'
             callback: Code711\Code711Api\Controller\NewsController:getNewsListAction
+          - methods: [get]
+            route: '/version'
+            callback: Code711\Code711Api\Controller\VersionController:getVersionAction
+
