--- a/Configuration/Routes/Api.yaml
+++ b/Configuration/Routes/Api.yaml
@@ -14,4 +14,5 @@ routes:
           - methods: [get]
             route: '/version'
             callback: Code711\Code711Api\Controller\VersionController:getVersionAction
+            middlewares: [Code711\Code711Api\Middleware\BasicAuthentication]
 
