--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
 	"description": "An API for accessing TYPO3 data",
 	"type": "typo3-cms-extension",
 	"require": {
-		"b13/slimphp-bridge": "dev-master",
-		"firebase/php-jwt": "dev-master"
+		"b13/slimphp-bridge": "^0.4",
+		"firebase/php-jwt": "^6.3"
 	},
 	"version": "1.0.0",
 	"autoload": {
