--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 	"type": "typo3-cms-extension",
 	"require": {
 		"b13/slimphp-bridge": "^0.4",
-		"firebase/php-jwt": "^6.3"
+		"firebase/php-jwt": "^6.3",
+		"helhum/dotenv-connector": "^3.0"
 	},
 	"version": "1.0.0",
 	"autoload": {
