--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 	"description": "An API for accessing TYPO3 data",
 	"type": "typo3-cms-extension",
 	"require": {
-		"b13/slimphp-bridge": "^0.4",
+		"b13/slimphp-bridge": "0.5.*",
 		"firebase/php-jwt": "^6.3",
 		"helhum/dotenv-connector": "^3.0"
 	},
