--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,9 @@
 		}
 	],
 	"type": "typo3-cms-extension",
+	"license": "MIT",
 	"require": {
-		"php": ">=8.1",
+		"typo3/cms-core": "^11.5",
 		"b13/slimphp-bridge": "^0.5",
 		"firebase/php-jwt": "^6.4",
 		"helhum/dotenv-connector": "^3.0"
